@@ -1,14 +1,0 @@
-<type_roles>
-  <role id='Assignee'>
-   <property id='title'>Assigned Person</property>
-   <property id='priority'>10.0</property>
-   <property id='base_category_script'>ERP5Type_getSecurityCategoryFromArrow</property>
-   <multi_property id='base_category'>source</multi_property>
-  </role>
-  <role id='Assignor'>
-   <property id='title'>Task Assignor</property>
-   <property id='priority'>10.0</property>
-   <property id='base_category_script'>ERP5Type_getSecurityCategoryFromArrow</property>
-   <multi_property id='base_category'>destination</multi_property>
-  </role>
-</type_roles>
