@@ -1,3 +1,6 @@
+2007-02-07 rafael
+* Remover Roles from Task Report
+
 2007-01-30 rafael
 * Added back default task line support
 * Added more fields in BaseTrade Project
